<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:title="@string/familiarity"
            android:icon="@drawable/familiarity"
            android:id="@+id/familiarity_id"/>
        <item
            android:title="@string/suggestion"
            android:icon="@drawable/suggestion"
            android:id="@+id/suggestion_id"/>
        <item
            android:title="@string/privacy"
            android:icon="@drawable/privacy"
            android:id="@+id/privacy_id"/>
        <item
            android:title="@string/about"
            android:icon="@drawable/about"
            android:id="@+id/about_id"/>
        <item
            android:title="@string/star"
            android:icon="@drawable/star"
            android:id="@+id/star_id"/>
        <item
            android:title="@string/share"
            android:icon="@drawable/share"
            android:id="@+id/share_id"/>
        <item
            android:title="@string/changes"
            android:icon="@drawable/changes"
            android:id="@+id/changes_id"/>
    </group>
</menu>