<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:context=".settings.LastChangesFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/iv_dot"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="2dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/txtColor2"
            android:contentDescription="@string/dot"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_circle_24" />

        <View
            android:id="@+id/v_dot"
            android:layout_width="1dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:layout_marginTop="2dp"
            android:background="@color/txtColor2"
            app:layout_constraintEnd_toEndOf="@+id/iv_dot"
            app:layout_constraintStart_toStartOf="@+id/iv_dot"
            app:layout_constraintTop_toBottomOf="@+id/iv_dot" />

        <ImageView
            android:id="@+id/iv_dot_2"
            android:layout_width="10dp"
            android:layout_height="10dp"
            android:layout_margin="2dp"
            android:layout_marginEnd="24dp"
            android:backgroundTint="@color/txtColor2"
            android:contentDescription="@string/dot"
            app:layout_constraintEnd_toEndOf="parent"
            app:srcCompat="@drawable/ic_circle_24"
            tools:layout_editor_absoluteY="294dp" />

        <View
            android:id="@+id/v_dot_2"
            android:layout_width="1dp"
            android:layout_height="200dp"
            android:layout_margin="10dp"
            android:background="@color/txtColor2"
            tools:layout_editor_absoluteX="359dp"
            tools:layout_editor_absoluteY="326dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/_1_0_0"
        android:textColor="@color/txtColor"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_dis_1_0_0"
        android:textColor="@color/txtColor"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_0_2_0"
        android:textColor="@color/txtColor"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/_dis_0_2_0"
        android:textColor="@color/txtColor"
        app:layout_constraintEnd_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

</androidx.constraintlayout.widget.ConstraintLayout>